Refactor: update short_name in manifest.json for clarity

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Pra Qual Escola",
-  "short_name": "Pra Qual Escola",
+  "short_name": "Escolas",
   "description": "Organize suas prioridades de escolas para atribuição de aulas",
   "start_url": "/",
   "display": "standalone",
